--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+i<html>
 <title> Sample Website </title>
 
 <body>
@@ -6,6 +6,6 @@
 
 <h3> These changes are being deployed automatically</h3>
 
-<h3> This is another change that I want to check </h3>
+<h3> This is another change that I want to check. Thanks You Yusuf</h3>
 </body>
 </html>
