--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ i<html>
 
 <h3> These changes are being deployed automatically</h3>
 
-<h3> This is another change that I want to check. Thanks You Yusuf</h3>
+<h3> Thanks You Yusuf</h3>
 </body>
 </html>
